# AI_Explore

./: .gitignore  README.md  app.py  index.html  pyproject.toml  script.js  styles.css
.github/workflows/: ci.yml
configs/: base.yml
configs/environments/: dev.yml  prod.yml  qa.yml  uat.yml
configs/mappings/: db_to_salesforce.yml  file_to_db.yml
docs/: IMPLEMENTATION_NOTES.md  SAMPLE_RUN.md
samples/input/: customers_20260328.csv  orders_20260328.txt
sql/: schema.sql
src/etl_sf/: main.py
src/etl_sf/audit/: logger.py  repository.py
src/etl_sf/config/: loader.py  models.py
src/etl_sf/database/: engine.py  repository.py
src/etl_sf/ingestion/: file_ingestor.py
src/etl_sf/mappings/: interpreter.py
src/etl_sf/orchestration/: pipeline.py
src/etl_sf/parsers/: factory.py
src/etl_sf/salesforce/: client.py  loader.py
src/etl_sf/transformations/: rules.py
src/etl_sf/web/: app.py  job_manager.py
static/: styles.css
templates/: index.html
tests/: test_config_loader.py  test_job_manager.py  test_sf_loader.py  test_transformations.py
