[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etl-sf-utility"
version = "0.1.0"
description = "Metadata-driven file-to-db-to-salesforce data loading utility"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2.0",
  "PyYAML>=6.0.1",
  "SQLAlchemy>=2.0.0",
  "pydantic>=2.6.0",
  "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
salesforce = ["simple-salesforce>=1.12.6"]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
